src/app/poll/mobile-poll-table.component.scss
@import './poll.component';

.form-control {
  appearance: auto
}

.poll-table.mobile td {
  vertical-align: middle;
  padding: 0;
  border-width: 1px 0 0 !important;
}

.btn.btn-transparent {
  display: inline-block;
  width: 45px;
  height: 100%;
  vertical-align: middle;
  outline-offset: 0;
}

.btn.btn-trash {
  @include focus-outline;
}

.poll-table td.suggested-date {
  @media (min-width: map-get($grid-breakpoints, sm)) {
    width: 150px;
  }
  @media (min-width: map-get($grid-breakpoints, md)) {
    width: 180px;
  }
}

.toolbar {
  background-color: $s-h-blue-15;
  min-height: 50px;
}

.poll-table td.total-participants {
  padding: 0;
}

.poll-table.mobile td.poll-options > img {
  margin-left: auto;
  margin-right: 1rem;
}

.voting-status-summary-image img {
  display: block;
}

